--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<p style="margin-top: 181px;"><a href="https://www.youtube.com/@illuminatidad"; target="_blank";><img src="images/YouTubeLogo.png">YouTube - @illuminatidad</a></p>
     <p><a href="https://www.moddb.com/company/derrick-davison/"; target="_blank";><img src="images/ModDBLogo.png">ModDB - Derrick Davison</a></p>
 	<p><a href="https://store.steampowered.com/search/?publisher=Derrick%20Davison"; target="_blank";><img src="images/steamLogo.png">Steam - Davison Games</a></p>
-	<p><a href="https://assetstore.unity.com/publishers/106044"; target="_blank";><img src="images/unityLogo.png">Unity Asset Store - Davison Games</a></p>
+	<p><a href="https://assetstore.unity.com/publishers/106044"; target="_blank";><img src="images/UnityLogo.png">Unity Asset Store - Davison Games</a></p>
 	<p><a href="https://gamejolt.com/@DerrickDavison"; target="_blank";><img src="images/GameJoltLogo.png">GameJolt - @DerrickDavison</a></p>
 	<p><a href="https://sites.google.com/smiteworks.com/davison-games/home"; target="_blank";><img src="images/googleSitesLogo.png">Google Sites - Davison Games</a></p>
 	  <div class="illDadCredLogo"><span class="illDadH1">Punch-Out Doom for PC developed by</span><img src="images/IllDadCred.png"><br><span class="illDadH2">Check out some of his great work at the links below and download the <a href="https://gamejolt.com/games/PunchoutDoommod/477263"; target="_blank";>Punch-Out mod for ZDoom here!</a></span></div> 	
